--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -41,3 +41,6 @@
     -->
   </body>
 </html>
+<script>
+     window.renderMFE1("root", null, true);
+</script>
