--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
     <div id="root">Loading...</div>
     <script src="mfe1.js"></script>
     <script>
-      window.renderMFE1("root",null,null,true);
+      window.renderApp("root",null,null,true);
     </script>  
     </body>
 </html>
