--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div id="root">Loading...</div>
     <script src="mfe1.js"></script>
     <script>
-      window.renderApp("root",null,null,true);
+      window.renderMFE1("root",null,null,true);
     </script>  
     </body>
 </html>
